# yet_another_testing_training

./: LICENSE  README.md  build.ps1  pypeline.yaml  pyproject.toml
docs/: conf.py  index.md  presentations.md
docs/presentations/testing/: Yet_another_testing_attempt.uxf  presentation.html  slides.md
docs/trainings/: basics.md  index.md
src/jarvis/: main.py
